--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Kalu - calculate at speed</title>
+		<meta name="author" content="Kushagra Gour">
+		<meta name="description" content="Calculate at speed">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<link rel="stylesheet" href="lib/codemirror/lib/codemirror.css">
 		<link rel="stylesheet" href="lib/codemirror/theme/monokai.css">
 
