--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 	<body>
 	    <script src="lib/codemirror/lib/codemirror.js"></script>
 	    <script src="lib/codemirror/mode/javascript/javascript.js"></script>
+		<script src="lib/codemirror/addon/edit/closebrackets.js"></script>
 	    <script src="lib/codemirror/addon/search/searchcursor.js"></script>
 
 	    <script src="editur.js"></script>
