--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<meta name="author" content="Kushagra Gour">
 		<meta name="description" content="Calculate at speed">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,800' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+
 
 		<link rel="stylesheet" href="lib/codemirror/lib/codemirror.css">
 		<link rel="stylesheet" href="lib/codemirror/theme/monokai.css">
@@ -20,7 +21,11 @@
 			margin: 0;
 			padding: 0;
 			background: #272822;
-			font-family: 'open sans', sans-serif;
+			font-size: 100%;
+			font-family: 'Slabo 27px', sans-serif;
+		}
+		a {
+			color: #66d9ef;
 		}
 		.cm {
 			transition: 0.25s ease 90ms;
@@ -53,19 +58,23 @@
 			left: 0;
 			right: 0;
 			top: calc(100vh - 50px);
-			/*height: 50px;*/
-			padding: 10px 30px 40px;
+			font-size: 1.5em;
+			font-weight: 200;
+			padding: 10px 30px 50px;
 			z-index: 3;
 			text-align: center;
 			background: #272822;
 			transition: 0.25s ease-out;
 		}
-		.info h2 {
-			margin: 0;
+		.info__name {
+			transition: 0.2s ease 0.15s;
 		}
 		.info:hover {
-			background: #22231E;
+			/*background: #22231E;*/
 			transform: translateY(calc(-100% + 60px));
+		}
+		.info:hover > .info__name {
+			font-size: 2.5em;
 		}
 		.info:hover + .cm {
 			transform: translateY(-50px);
@@ -77,11 +86,12 @@
 
 	<body>
 		<div class="info">
-			<div>Kalu</div>
-			<p>'Kalu' is a calculator concept which aim at making long and interlinked calculations really fast.
+			<div class="info__name">Kalu</div>
+			<p>'Kalu' is a calculator concept which aims at making long and inter-linked calculations really fast.
 			</p>
+			<p>Developed by <a href="https://twitter.com/chinchang457">Kushagra Gour</a></p>
 			<p>
-				<a href="">See the Source</a>
+				<a href="https://github.com/chinchang/kalu">See the Source</a>
 			</p>
 			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://kushagragour.in/lab/kalu" data-via="chinchang457" data-hashtags="calculator,ux,fast">Tweet</a>
 		</div>
@@ -93,7 +103,7 @@
 		<script src="lib/codemirror/addon/edit/closebrackets.js"></script>
 	    <script src="lib/codemirror/addon/search/searchcursor.js"></script>
 
-	    <script src="editur.js"></script>
+	    <script src="script.js"></script>
 
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
