--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<p>Developed by <a href="https://twitter.com/chinchang457">Kushagra Gour</a></p>
 				<p>
 					<a class="inline-link" href="https://github.com/chinchang/kalu">Source Code</a>
-					<a class="inline-link" href="">More projects</a>
+					<a class="inline-link" href="http://kushagragour.in/lab/">More projects</a>
 				</p>
 				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://kushagragour.in/lab/kalu" data-via="chinchang457" data-hashtags="calculator,ux,fast">Tweet</a>
 			</div>
