--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Kalu - calculate at speed</title>
+		<title>Kalu - Calculate at speed</title>
 		<meta name="author" content="Kushagra Gour">
-		<meta name="description" content="Calculate at speed">
+		<meta name="description" content="A calculator concept for long and inter-linked calculations">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 
