--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Kalu - Calculate at speed</title>
+		<title>Kalu - A calculator concept for long and inter-linked calculations</title>
 		<meta name="author" content="Kushagra Gour">
 		<meta name="description" content="A calculator concept for long and inter-linked calculations">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
