--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<a class="inline-link" href="https://github.com/chinchang/kalu">Source Code</a>
 					<a class="inline-link" href="http://kushagragour.in/lab/">More projects</a>
 				</p>
-				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://kushagragour.in/lab/kalu" data-via="chinchang457" data-hashtags="calculator,ux,fast">Tweet</a>
+				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://kushagragour.in/lab/kalu" data-via="chinchang457" data-hashtags="calculator,javascript">Tweet</a>
 			</div>
 		</label>
 		<div id="js-cm" class="cm"></div>
