first new implementation with AI - linkages work!

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       /* Codemirror */
       .Codemirror {
         width: 100%;
-        height: calc(100% - 50px); /* 50px footer */
+        height: calc(100% - 50px); /* 50px footer */
         opacity: 0.9;
         font-size: 1.4em;
       }
@@ -57,9 +57,63 @@
         padding: 3px;
         transform: translate(9px, -85%);
         border-radius: 3px;
-        z-index: 3; /* Bring over codemirror-lines so they are clickable */
+        z-index: 3; /* Bring over codemirror-lines so they are clickable */
         cursor: pointer;
       }
+
+      /* Reference highlight styles */
+      .reference-highlight {
+        background: rgba(102, 217, 239, 0.3);
+        color: #66d9ef;
+        border-radius: 3px;
+        padding: 2px 4px;
+        cursor: pointer;
+        position: relative;
+        font-weight: bold;
+      }
+
+      .reference-highlight:hover {
+        background: rgba(102, 217, 239, 0.5);
+      }
+
+      .reference-highlight::after {
+        content: "↗";
+        font-size: 0.8em;
+        vertical-align: super;
+        margin-left: 2px;
+      }
+
+      /* Line highlight styles */
+      .highlighted-line {
+        background: rgba(102, 217, 239, 0.1);
+      }
+
+      .target-line-highlight {
+        background: rgba(102, 217, 239, 0.3);
+        transition: background 0.5s ease-out;
+      }
+
+      /* Tooltip styles */
+      [title] {
+        position: relative;
+      }
+
+      [title]:hover::before {
+        content: attr(title);
+        position: absolute;
+        bottom: 100%;
+        left: 0;
+        background: #272822;
+        color: #f8f8f2;
+        padding: 5px 10px;
+        border-radius: 3px;
+        border: 1px solid #66d9ef;
+        font-size: 0.8em;
+        white-space: nowrap;
+        z-index: 10;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+      }
+
       .info {
         color: rgba(255, 255, 255, 0.5);
         position: absolute;
@@ -153,7 +207,7 @@
       var _gaq = _gaq || [];
       _gaq.push(["_setAccount", "UA-19798102-1"]);
       _gaq.push(["_trackPageview"]);
-      (function() {
+      (function () {
         var ga = document.createElement("script");
         ga.type = "text/javascript";
         ga.async = !0;
