--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
         --bg-base:    #0d1520;
         --bg-surface: #131d2a;
         --bg-raised:  #182636;
-        --border:     rgba(0, 212, 170, 0.1);
-        --border-strong: rgba(0, 212, 170, 0.2);
 
-        --teal:       #00d4aa;
-        --teal-dim:   rgba(0, 212, 170, 0.6);
-        --teal-glow:  rgba(0, 212, 170, 0.15);
+        --accent:     #00d4aa;
+        --accent-rgb: 0, 212, 170;
+        --accent-dim: rgba(var(--accent-rgb), 0.6);
+        --accent-glow: rgba(var(--accent-rgb), 0.15);
+        --border:     rgba(var(--accent-rgb), 0.1);
+        --border-strong: rgba(var(--accent-rgb), 0.2);
+
         --gold:       #f0c674;
         --gold-dim:   rgba(240, 198, 116, 0.85);
         --pink:       #ff6b8a;
@@ -49,7 +51,6 @@
         --radius-sm:  5px;
 
         --tab-h:      44px;
-        --footer-h:   52px;
       }
 
       /* ─── Reset & base ──────────────────────────────────── */
@@ -93,12 +94,12 @@
         transform: translateX(-50%);
         width: 600px;
         height: 300px;
-        background: radial-gradient(ellipse, rgba(0,212,170,0.06) 0%, transparent 70%);
+        background: radial-gradient(ellipse, rgba(var(--accent-rgb),0.06) 0%, transparent 70%);
         z-index: 0;
         pointer-events: none;
       }
 
-      a { color: var(--teal); text-decoration: none; }
+      a { color: var(--accent); text-decoration: none; }
       a:hover { text-decoration: underline; }
 
       /* ─── Layout wrapper ────────────────────────────────── */
@@ -107,7 +108,7 @@
         z-index: 1;
         display: flex;
         flex-direction: column;
-        height: 100%;
+        height: calc(100% - 32px);
       }
 
       /* ─── Header bar ────────────────────────────────────── */
@@ -129,7 +130,7 @@
         font-family: var(--font-mono);
         font-weight: 600;
         font-size: 16px;
-        color: var(--teal);
+        color: var(--accent);
         letter-spacing: -0.5px;
       }
 
@@ -140,7 +141,7 @@
         width: 26px;
         height: 26px;
         border-radius: 6px;
-        background: linear-gradient(135deg, var(--teal), #00a88a);
+        background: linear-gradient(135deg, var(--accent), rgba(var(--accent-rgb), 0.7));
         color: var(--bg-deep);
         font-size: 13px;
         font-weight: 600;
@@ -168,7 +169,7 @@
       }
 
       .header-link:hover {
-        color: var(--teal);
+        color: var(--accent);
         text-decoration: none;
       }
 
@@ -222,11 +223,11 @@
 
       .tab:hover {
         color: var(--text);
-        background: rgba(0, 212, 170, 0.03);
+        background: rgba(var(--accent-rgb), 0.03);
       }
 
       .tab.active {
-        color: var(--teal);
+        color: var(--accent);
         background: var(--bg-surface);
         font-weight: 500;
       }
@@ -238,7 +239,7 @@
         left: 8px;
         right: 8px;
         height: 2px;
-        background: var(--teal);
+        background: var(--accent);
         border-radius: 2px 2px 0 0;
         animation: tabSlide 0.25s ease-out;
       }
@@ -290,8 +291,8 @@
       }
 
       .new-page-btn:hover {
-        color: var(--teal);
-        background: var(--teal-glow);
+        color: var(--accent);
+        background: var(--accent-glow);
       }
 
       /* ─── Editor container ──────────────────────────────── */
@@ -360,8 +361,8 @@
       .reference-highlight {
         display: inline-flex;
         align-items: center;
-        background: rgba(0, 212, 170, 0.12);
-        color: var(--teal);
+        background: rgba(var(--accent-rgb), 0.12);
+        color: var(--accent);
         border-radius: 3px;
         padding: 1px 6px;
         cursor: pointer;
@@ -369,13 +370,13 @@
         font-weight: 500;
         font-family: var(--font-mono);
         font-size: 0.92em;
-        border: 1px solid rgba(0, 212, 170, 0.15);
+        border: 1px solid rgba(var(--accent-rgb), 0.15);
         transition: background 0.15s, border-color 0.15s;
       }
 
       .reference-highlight:hover {
-        background: rgba(0, 212, 170, 0.22);
-        border-color: rgba(0, 212, 170, 0.35);
+        background: rgba(var(--accent-rgb), 0.22);
+        border-color: rgba(var(--accent-rgb), 0.35);
       }
 
       .reference-highlight::after {
@@ -387,11 +388,11 @@
 
       /* ─── Line highlighting ─────────────────────────────── */
       .highlighted-line {
-        background: rgba(0, 212, 170, 0.05) !important;
+        background: rgba(var(--accent-rgb), 0.05) !important;
       }
 
       .target-line-highlight {
-        background: rgba(0, 212, 170, 0.12) !important;
+        background: rgba(var(--accent-rgb), 0.12) !important;
         transition: background 0.5s ease-out;
       }
 
@@ -451,91 +452,31 @@
         to   { opacity: 1; transform: translateY(0); }
       }
 
-      /* ─── Info / footer panel ───────────────────────────── */
-      .info {
-        color: var(--text-dim);
-        position: absolute;
+      /* ─── Footer ──────────────────────────────────────── */
+      .footer {
+        position: fixed;
+        bottom: 0;
         left: 0;
         right: 0;
-        top: calc(100vh - var(--footer-h));
-        font-size: 13px;
-        padding: 12px 30px 40px;
-        z-index: 10;
-        text-align: center;
+        z-index: 5;
+        height: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 4px;
         background: var(--bg-surface);
         border-top: 1px solid var(--border);
-        transition: 0.5s cubic-bezier(0.77, -0.03, 0.25, 1);
-      }
-
-      .info__name {
-        font-family: var(--font-mono);
-        font-weight: 600;
-        font-size: 1.1em;
-        color: var(--teal);
-        letter-spacing: -0.5px;
-        transition: 0.25s ease 0.15s;
-      }
-
-      .info p { margin: 6px 0; line-height: 1.5; }
-
-      .inline-link {
-        text-transform: uppercase;
         font-size: 11px;
-        letter-spacing: 0.06em;
-        margin: 0 4px;
+        color: var(--text-muted);
+      }
+
+      .footer a {
         color: var(--text-dim);
         transition: color 0.2s;
       }
 
-      .inline-link:hover { color: var(--teal); }
-
-      .inline-link:not(:last-child)::after {
-        content: '';
-        display: inline-block;
-        width: 1px;
-        height: 10px;
-        background: var(--border-strong);
-        margin-left: 10px;
-        vertical-align: middle;
-      }
-
-      body.has-mouse .info:hover,
-      #footer-checkbox:checked + label .info {
-        transform: translateY(calc(-100% + var(--footer-h)));
-      }
-
-      body.has-mouse .info:hover .info__name,
-      #footer-checkbox:checked + label .info__name {
-        font-size: 1.8em;
-      }
-
-      /* Dim the editor when footer opens */
-      body.has-mouse label[for='footer-checkbox']:hover ~ .app-shell,
-      #footer-checkbox:checked ~ .app-shell {
-        opacity: 0.4;
-        transform: translateY(-30px);
-        transition: 0.4s cubic-bezier(0.77, -0.03, 0.25, 1);
-      }
-
-      .app-shell {
-        transition: opacity 0.4s ease, transform 0.4s ease;
-      }
-
-      .twitter-share-button {
-        display: inline-block;
-        margin-top: 6px;
-        padding: 4px 14px;
-        background: var(--bg-raised);
-        color: var(--text-dim);
-        border-radius: var(--radius-sm);
-        font-size: 12px;
-        border: 1px solid var(--border);
-        transition: border-color 0.2s, color 0.2s;
-      }
-
-      .twitter-share-button:hover {
-        border-color: var(--border-strong);
-        color: var(--teal);
+      .footer a:hover {
+        color: var(--accent);
         text-decoration: none;
       }
 
@@ -549,6 +490,169 @@
         animation: fadeUp 0.4s ease-out;
       }
 
+      /* ─── Settings button ─────────────────────────────────── */
+      .settings-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 30px;
+        height: 30px;
+        padding: 0;
+        border: none;
+        border-radius: 6px;
+        background: transparent;
+        color: var(--text-dim);
+        cursor: pointer;
+        transition: color 0.2s, background 0.2s;
+      }
+
+      .settings-btn:hover {
+        color: var(--accent);
+        background: rgba(var(--accent-rgb), 0.08);
+      }
+
+      /* ─── Settings pane & backdrop ─────────────────────── */
+      .settings-backdrop {
+        position: fixed;
+        inset: 0;
+        z-index: 90;
+        background: rgba(0, 0, 0, 0.45);
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.25s ease;
+      }
+
+      .settings-backdrop.open {
+        opacity: 1;
+        pointer-events: auto;
+      }
+
+      .settings-pane {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 280px;
+        z-index: 100;
+        background: var(--bg-surface);
+        border-left: 1px solid var(--border-strong);
+        box-shadow: -8px 0 32px rgba(0, 0, 0, 0.4);
+        transform: translateX(100%);
+        transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        display: flex;
+        flex-direction: column;
+        font-family: var(--font-ui);
+      }
+
+      .settings-pane.open {
+        transform: translateX(0);
+      }
+
+      .settings-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 16px 20px;
+        border-bottom: 1px solid var(--border);
+        flex-shrink: 0;
+      }
+
+      .settings-title {
+        font-family: var(--font-mono);
+        font-weight: 600;
+        font-size: 14px;
+        color: var(--text);
+        letter-spacing: -0.3px;
+      }
+
+      .settings-close {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 28px;
+        height: 28px;
+        padding: 0;
+        border: none;
+        border-radius: 6px;
+        background: transparent;
+        color: var(--text-dim);
+        font-size: 20px;
+        cursor: pointer;
+        transition: color 0.15s, background 0.15s;
+      }
+
+      .settings-close:hover {
+        color: var(--text);
+        background: var(--bg-raised);
+      }
+
+      .settings-body {
+        flex: 1;
+        overflow-y: auto;
+        padding: 20px;
+      }
+
+      .settings-section {
+        margin-bottom: 24px;
+      }
+
+      .settings-label {
+        display: block;
+        font-size: 11px;
+        font-weight: 500;
+        text-transform: uppercase;
+        letter-spacing: 0.08em;
+        color: var(--text-dim);
+        margin-bottom: 12px;
+      }
+
+      /* ─── Accent swatches ──────────────────────────────── */
+      .accent-swatches {
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+      }
+
+      .swatch {
+        position: relative;
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        border: 2px solid transparent;
+        background: var(--sw);
+        cursor: pointer;
+        padding: 0;
+        transition: border-color 0.2s, transform 0.15s, box-shadow 0.2s;
+        outline: none;
+      }
+
+      .swatch:hover {
+        transform: scale(1.12);
+        box-shadow: 0 0 12px rgba(var(--accent-rgb), 0.2);
+      }
+
+      .swatch.active {
+        border-color: var(--text);
+        box-shadow: 0 0 0 2px var(--bg-surface), 0 0 0 4px var(--sw);
+      }
+
+      .swatch-check {
+        position: absolute;
+        inset: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+        font-weight: 700;
+        color: var(--bg-deep);
+        opacity: 0;
+        transition: opacity 0.15s;
+      }
+
+      .swatch.active .swatch-check {
+        opacity: 1;
+      }
+
       /* ─── Responsive ────────────────────────────────────── */
       @media (max-width: 600px) {
         .header-tagline { display: none; }
@@ -560,36 +664,10 @@
   </head>
 
   <body class="has-mouse">
-    <input type="checkbox" hidden id="footer-checkbox" />
-    <label for="footer-checkbox">
-      <div class="info">
-        <div class="info__name">Kalu</div>
-        <p>
-          'Kalu' is a calculator concept which aims at making long and
-          inter-linked calculations really easy & fast.
-        </p>
-        <p>
-          Developed by
-          <a href="https://twitter.com/chinchang457">Kushagra Gour</a>
-        </p>
-        <p>
-          <a class="inline-link" href="https://github.com/chinchang/kalu"
-            >Source Code</a
-          >
-          <a class="inline-link" href="https://kushagra.dev/lab/"
-            >More projects</a
-          >
-        </p>
-        <a
-          href="https://twitter.com/share"
-          class="twitter-share-button"
-          data-url="http://kushagragour.in/lab/kalu"
-          data-via="chinchang457"
-          data-hashtags="calculator,javascript"
-          >Tweet</a
-        >
-      </div>
-    </label>
+    <footer class="footer">
+      <span>Built by</span>
+      <a href="https://twitter.com/chinchang457">Kushagra Gour</a>
+    </footer>
 
     <div class="app-shell">
       <header class="header">
@@ -597,15 +675,53 @@
           <span class="header-brand-icon">K</span>
           Kalu
         </div>
-        <span class="header-tagline">Interlinked calculations, instantly</span>
+        <span class="header-tagline">A calculator for long, interlinked calculations</span>
         <nav class="header-links">
           <a class="header-link" href="https://github.com/chinchang/kalu">GitHub</a>
           <span class="header-link-sep"></span>
           <a class="header-link" href="https://kushagra.dev/lab/">More projects</a>
+          <span class="header-link-sep"></span>
+          <button id="settings-btn" class="settings-btn" aria-label="Settings">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="12" cy="12" r="3"/>
+              <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06A1.65 1.65 0 0 0 4.68 15a1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06A1.65 1.65 0 0 0 9 4.68a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06A1.65 1.65 0 0 0 19.4 9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"/>
+            </svg>
+          </button>
         </nav>
       </header>
       <div id="js-cm" class="cm"></div>
     </div>
+
+    <!-- Settings side pane -->
+    <div id="settings-backdrop" class="settings-backdrop"></div>
+    <aside id="settings-pane" class="settings-pane">
+      <div class="settings-header">
+        <span class="settings-title">Settings</span>
+        <button id="settings-close" class="settings-close" aria-label="Close settings">&times;</button>
+      </div>
+      <div class="settings-body">
+        <div class="settings-section">
+          <label class="settings-label">Accent Color</label>
+          <div id="accent-swatches" class="accent-swatches">
+            <button class="swatch active" data-accent="green" data-color="#00d4aa" data-rgb="0,212,170" style="--sw: #00d4aa" aria-label="Green accent">
+              <span class="swatch-check">&#10003;</span>
+            </button>
+            <button class="swatch" data-accent="orange" data-color="#f0a050" data-rgb="240,160,80" style="--sw: #f0a050" aria-label="Orange accent">
+              <span class="swatch-check">&#10003;</span>
+            </button>
+            <button class="swatch" data-accent="pink" data-color="#ff6b8a" data-rgb="255,107,138" style="--sw: #ff6b8a" aria-label="Pink accent">
+              <span class="swatch-check">&#10003;</span>
+            </button>
+            <button class="swatch" data-accent="white" data-color="#c8d3e0" data-rgb="200,211,224" style="--sw: #c8d3e0" aria-label="White accent">
+              <span class="swatch-check">&#10003;</span>
+            </button>
+            <button class="swatch" data-accent="yellow" data-color="#f0c674" data-rgb="240,198,116" style="--sw: #f0c674" aria-label="Yellow accent">
+              <span class="swatch-check">&#10003;</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </aside>
 
     <script src="lib/codemirror/lib/codemirror.js"></script>
     <script src="lib/codemirror/mode/javascript/javascript.js"></script>
