--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     />
 
     <link rel="stylesheet" href="lib/codemirror/lib/codemirror.css" />
+    <link rel="stylesheet" href="lib/codemirror/addon/hint/show-hint.css" />
     <link rel="stylesheet" href="lib/codemirror/theme/kalu-dark.css" />
 
     <style>
@@ -653,6 +654,42 @@
         opacity: 1;
       }
 
+      /* ─── Autocomplete hint dropdown ─────────────────────── */
+      .CodeMirror-hints {
+        background: var(--bg-raised);
+        border: 1px solid var(--border-strong);
+        border-radius: var(--radius-sm);
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
+        font-family: var(--font-mono);
+        font-size: 13px;
+        padding: 4px 0;
+        z-index: 60;
+        max-height: 180px;
+        overflow-y: auto;
+        scrollbar-width: thin;
+        scrollbar-color: var(--bg-surface) var(--bg-raised);
+      }
+
+      .CodeMirror-hint {
+        padding: 4px 12px;
+        color: var(--text);
+        cursor: pointer;
+        white-space: nowrap;
+        border-radius: 0;
+        line-height: 1.5;
+      }
+
+      li.CodeMirror-hint-active {
+        background: rgba(var(--accent-rgb), 0.15);
+        color: var(--accent);
+      }
+
+      .hint-value {
+        color: var(--text-muted);
+        margin-left: 8px;
+        font-size: 0.9em;
+      }
+
       /* ─── Responsive ────────────────────────────────────── */
       @media (max-width: 600px) {
         .header-tagline { display: none; }
@@ -666,7 +703,7 @@
   <body class="has-mouse">
     <footer class="footer">
       <span>Built by</span>
-      <a href="https://twitter.com/chinchang457">Kushagra Gour</a>
+      <a href="https://x.com/cssMonk">Kushagra Gour</a>
     </footer>
 
     <div class="app-shell">
@@ -727,6 +764,7 @@
     <script src="lib/codemirror/mode/javascript/javascript.js"></script>
     <script src="lib/codemirror/addon/edit/closebrackets.js"></script>
     <script src="lib/codemirror/addon/search/searchcursor.js"></script>
+    <script src="lib/codemirror/addon/hint/show-hint.js"></script>
     <script src="lib/math.min.js"></script>
 
     <script src="script.js"></script>
